--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Hi, I am <strong>Mark Buckle</strong>
             </h1>
             <p class ="section__subtitle section__subtitle--intro">Front-end developer</p>
-            <img src="img/dev-mark-02.jpg" alt="Markimg01" class="intro__img">
+            <img src="img/dev-mark-02.png" alt="Markimg01" class="intro__img">
         </section>
         
         <!-- My services -->
